fixed flicker bug with fadeToggle, renamed bufferCard, hid overlay

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ h1 {
 }
 #card, .content {
     display:inline-block;
-    opacity:0;
     min-width:804px;
     min-height:200px;
     /* make the card un-selectable */
